kubernetes/react-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: react-client
          image: yoanaes/notes-client-eks
          ports:
            - containerPort: 3000
