kubernetes/spring-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: spring-api
          image: yoanaes/notes-api-eks
          ports:
            - containerPort: 8080
