kubernetes/spring-api-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-api-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: api
  ports:
    - port: 8080
      targetPort: 8080
